<?xml version="1.0"?>
<package format="2">
  <name>multi_lidar_merger</name>
  <version>1.12.0</version>
  <description>The multi_lidar_merger package allows to merge several lidar datas</description>
  <maintainer email="xoz1206@naver.com">amc-nu</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>qtbase5-dev</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>libqt5-core</exec_depend>

  <test_depend>rosunit</test_depend>
</package>
